# gazelleprotoname

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  foo.proto  go.mod
